[package]
name = "sqllogictests"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
# For spark-connect-rs
arrow_51 = { version = "51", package = "arrow" }
async-trait = { workspace = true }
bigdecimal = "0.4.1"
datafusion = { workspace = true, default-features = true }
datafusion-common = { workspace = true, default-features = true }
env_logger = { workspace = true }
half = "2.4.1"
iceberg-catalog-rest = { path = "../catalog/rest" }
iceberg-datafusion = { path = "../integrations/datafusion" }
itertools = "0.13.0"
log = "0.4.22"
rust_decimal = { version = "1.27.0" }
spark-connect-rs = "0.0.1-beta.5"
sqllogictest = "0.22"
sqlparser = { workspace = true }
tempfile = { workspace = true }
thiserror = "1.0.63"
tokio = "1.38.0"
toml = "0.8.19"
url = { workspace = true }

[dev-dependencies]
iceberg_test_utils = { path = "../test_utils", features = ["tests"] }
libtest-mimic = "0.7.3"

[[test]]
harness = false
name = "sqllogictests"
path = "tests/sqllogictests.rs"
