[package]
name = "motore-macros"
version = "0.4.0"
edition = "2021"
description = """
Motore's proc macros.
"""
documentation = "https://docs.rs/motore-macros"
readme = "README.md"
homepage = "https://cloudwego.io/docs/motore/"
repository = "https://github.com/cloudwego/motore"
license = "MIT OR Apache-2.0"
authors = ["Motore Team <motore@cloudwego.io>"]
categories = ["asynchronous"]
keywords = ["motore", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.44", features = ["full"] }

[dev-dependencies]
motore = { path = "../motore" }

[features]
default = []
service_send = []
