# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "motore-macros"
version = "0.4.0"
edition = "2021"
description = """
Motore's proc macros.
"""
documentation = "https://docs.rs/motore-macros"
readme = "README.md"
homepage = "https://cloudwego.io/docs/motore/"
repository = "https://github.com/cloudwego/motore"
license = "MIT OR Apache-2.0"
authors = ["Motore Team <motore@cloudwego.io>"]
categories = ["asynchronous"]
keywords = ["motore", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.44", features = ["full"] }

[dev-dependencies]
motore = { path = "../motore" }

[features]
default = []
service_send = []
