[package]
name = "iceberg-catalog-hms"
version = "0.1.0"
edition = "2021"

categories = ["database"]
description = "Apache Iceberg Hive Metastore Catalog Support"
repository = "https://github.com/apache/iceberg-rust"
license = "Apache-2.0"
keywords = ["iceberg", "hive", "catalog"]

[dependencies]
hive_metastore = "0.0.1"
# the thrift upstream suffered from no regular rust release.
#
# [test-rs](https://github.com/tent-rs) is an organization that helps resovles this
# issue. And [tent-thrift](https://github.com/tent-rs/thrift) is a fork of the thrift
# crate, built from the thrift upstream with only version bumped.
thrift = { package = "tent-thrift", version = "0.18.1" }
typed-builder = { workspace = true }
async-trait = { workspace = true }
iceberg = { workspace = true }
