# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = { workspace = true }
homepage = { workspace = true }
name = "iceberg-aws"
rust-version = { workspace = true }
version = { workspace = true }

categories = ["database"]
description = "Apache Iceberg AWS Integration"
keywords = ["iceberg", "integrations", "aws"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-sts = { workspace = true }
iceberg = { workspace = true }
reqsign-aws-v4 = { workspace = true }
reqsign-core = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
mockito = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
