# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = { workspace = true }
homepage = { workspace = true }
name = "iceberg-ballista"
publish = true
rust-version = { workspace = true }
version = { workspace = true }

categories = ["database"]
description = "Apache Iceberg distributed read/write driver for Ballista"
keywords = ["iceberg", "ballista", "datafusion", "distributed"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ballista-core = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-loader = { workspace = true }
iceberg-datafusion = { workspace = true }
iceberg-storage-opendal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
ballista = { workspace = true, features = ["standalone"] }
# Used by the multi-executor integration test to start a scheduler + several
# in-process executors directly. Feature flags mirror what ballista's
# `standalone` feature already enables, so these reuse the same compiled
# artifacts rather than triggering a separate build.
ballista-executor = { workspace = true }
ballista-scheduler = { workspace = true }
env_logger = { workspace = true }
iceberg-catalog-rest = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
