[package]
name = "iceberg-cli"
description = "Apache iceberg client"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
clap = {workspace = true}
datafusion-cli = {workspace = true}
datafusion = {workspace = true}
tokio = {workspace = true}
env_logger = {workspace = true}
anyhow = {workspace = true}
iceberg-datafusion = {workspace = true}
toml = {workspace = true}
iceberg-catalog-rest = {workspace = true}
log = {workspace = true}
dirs = {workspace = true}