# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
description = "Apache iceberg client"
edition = "2024"
homepage = "https://rust.iceberg.apache.org/"
license = "Apache-2.0"
name = "iceberg-playground"
readme = "README.md"
repository = "https://github.com/apache/iceberg-rust"
rust-version = "1.87"
version = "0.7.0"

[dependencies]
# Dependencies commented out - this crate is excluded from workspace
# anyhow = { workspace = true }
# clap = { workspace = true }
# datafusion = { workspace = true }
# datafusion-cli = { workspace = true }
# dirs = { workspace = true }
# fs-err = { workspace = true }
# home = { workspace = true }
# iceberg = { workspace = true }
# iceberg-catalog-rest = { workspace = true }
# iceberg-datafusion = { workspace = true }
# mimalloc = { workspace = true }
# stacker = { workspace = true }
# tokio = { workspace = true }
# toml = { workspace = true }
# tracing = { workspace = true }
# tracing-subscriber = { workspace = true }

[package.metadata.cargo-machete]
# These dependencies are added to ensure minimal dependency version
ignored = ["stacker", "mimalloc", "home"]
