# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iceberg-storage-common"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }

categories = ["database"]
description = "Apache Iceberg Storage Common Test Suite"
keywords = ["iceberg", "storage"]

[dependencies]
iceberg = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
iceberg = { workspace = true }
iceberg-storage-opendal = { workspace = true, features = ["opendal-all"] }
iceberg_test_utils = { path = "../../test_utils", features = ["tests"] }
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqsign = { version = "0.16.3", default-features = false }
reqwest = { workspace = true }
tempfile = { workspace = true }
proptest = { version = "1" }
